@@ -1,5 +1,7 @@
 Revision history for Web::Components::Role::TT
 
+          - Capture rv of templater process
+
 0.8.1     2017-04-01 09:11:41
           - Toolchain update CVE-2016-1238
 
